# goated-engine

./: .gitmodules  CMakeLists.txt  README.md  cube.c  cube.h  main.c  math3d.c  math3d.h  mesh.h  normalize_coords.c  normalize_coords.h  obj_to_mesh.c  obj_to_mesh.h  object.c  object.h  penger.c  penger.h  renderer.c  renderer.h  texture_loader.c  texture_loader.h
assets/: SYOEM7MWIAVZCVFPIWOS89N5I.mtl
